<resources>
    <string name="app_name">AndroidApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_navigation_menu">NavigationMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Application Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Strings related to menu-->
    <string name="menu_home">Home</string>
    <string name="menu_devices">Devices</string>
    <string name="menu_slideshow">Alerts</string>
    <string name="menu_tools">Settings</string>
    <string name="menu_share">Floor Plan</string>
    <string name="menu_send">Log Out</string>

    <!--Strings related to TV device-->
    <string name="add_tv_title">Add Television</string>
    <string name="tv_location_hint">Location</string>
    <string name="tv_name_hint">Name</string>
    <string name="add_tv_button">Add</string>
    <string name="tv_settings_title"></string>
</resources>
