<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_devices"
            android:icon="@drawable/ic_lightbulb_outline"
            android:title="@string/menu_devices" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_notifications"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_grid_on"
            android:title="@string/menu_share" />

    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_settings_black"
                android:title="@string/menu_tools" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_person_outline"
                android:title="@string/menu_send" />

        </menu>
    </item>

</menu>
